@@ -1,3 +1,8 @@
+2004-03-15  Saito <saito@intaa.net>
+
+	* interface/w32g.h, interface/w32g_i.c, interface/w32g_c.c:
+	  Support for GS LCD in Win32GUI interface.
+
 2004-03-14  Saito <saito@intaa.net>
 
 	* timidity/readmidi.c, timidity/reverb.[ch]:
